[package]
name = "os-api-broker"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Local userspace broker daemon for the OS-API proof-of-concept"

[dependencies]
os-api-client = { path = "../os-api-client" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
